# snake-game

./: .gitignore  CMakeLists.txt  README.md
include/: snake.cxx  snake.hpp
src/: main.cxx
